--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,13 @@ extends wrapper
 
 block content
   p Home
+  
+  .hidden-logged-out
+    .hidden-dont-have-subscription
+      p Hi subscriber!
+    .hidden-have-subscription
+      p Hi, why not subscribe now!
+  
 
 block fab
   .hidden-logged-in
