--- a/views/users/user-home.pug
+++ b/views/users/user-home.pug
@@ -8,3 +8,8 @@ block content
 
 	if flash
 		p.alert= flash
+
+	.hidden-dont-have-subscription
+		p Hi subscriber!
+	.hidden-have-subscription
+		p Hi, why not <a href="/users/subscription">subscribe now</a>!
