--- a/views/users/subscription.pug
+++ b/views/users/subscription.pug
@@ -9,7 +9,10 @@ block content
 	- var cancelled = false
 
 
-	if stripe && stripe.subscriptions && stripe.subscriptions.data.length
+	if stripe && stripe.subscriptions
+		
+		if !stripe.subscriptions.data.length
+			p You have no active subscription.
 
 		each subscription in stripe.subscriptions.data
 			- var start = subscription.created ? new moment(subscription.created * 1000).format('MM/DD/YYYY') : '';
@@ -28,7 +31,7 @@ block content
 			if paymentMethod
 				p!= 'Your current <strong>' + paymentMethod.card.brand + '</strong> card ends with <strong>' + paymentMethod.card.last4 + '</strong> and expires on <strong>' + paymentMethod.card.exp_month + '/' + paymentMethod.card.exp_year + '</strong>'
 				
-		if !cancelled
+		if stripe.subscriptions.data.length && !cancelled
 			- canSubscribe = false
 			p
 				a(href="#" data-jsclass="ajaxButton" data-endpoint='/api/users/subscription-cancel' data-method="GET" data-redirect="/users/subscription") Click Here 
