--- a/views/users/change-password.pug
+++ b/views/users/change-password.pug
@@ -2,7 +2,10 @@ extends ../wrapper
 
 block content
 	.page-header
-		h2 Change Password
+		h2
+			a(href="/users/settings")
+				i.material-icons arrow_back_ios
+			| Change Password
 				
 	form.form.form-validation(action="/api/users/change-password" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 		.reg-form-container
