--- a/views/users/subscription.pug
+++ b/views/users/subscription.pug
@@ -2,7 +2,10 @@ extends ../wrapper
 
 block content
 	.page-header
-		h2 Subscription
+		h2
+			a(href="/users/settings")
+				i.material-icons arrow_back_ios
+			| Subscription
 				
 	- var canSubscribe = true
 
