--- a/views/users/change-password.pug
+++ b/views/users/change-password.pug
@@ -1,14 +1,14 @@
 extends ../wrapper
 
 block content
-	.page-header
+	.reg-form-container.centered
 		h2
 			a(href="/users/settings")
 				i.material-icons arrow_back_ios
+			i.material-icons lock
 			| Change Password
 				
-	form.form.form-validation(action="/api/users/change-password" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
-		.reg-form-container
+		form.form.form-validation(action="/api/users/change-password" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 			.reg-form.clear-fix.mdc-elevation--z1
 				
 				section.form-group
