--- a/views/users/password-reset.pug
+++ b/views/users/password-reset.pug
@@ -1,12 +1,10 @@
 extends ../wrapper
 
 block content
-	
-	.page-header
-		h2 Reset Password Request
+	.reg-form-container.centered
+		h2 <i class="material-icons">lock</i> Reset Password Request
 				
-	form.form.form-validation(action="/api/users/password-reset" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true")
-		.reg-form-container
+		form.form.form-validation(action="/api/users/password-reset" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true")
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
