--- a/views/users/password-set.pug
+++ b/views/users/password-set.pug
@@ -1,15 +1,14 @@
 extends ../wrapper
 
 block content
-	.page-header
-		h2 Reset Password
+	.reg-form-container.centered
+		h2 <i class="material-icons">lock</i> Reset Password
 		
-	if error
-		.alert.alert-error= error
-	else
-					
-		form.form.form-validation(action="/api/users/password-set" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
-			.reg-form-container
+		if error
+			.alert.alert-error= error
+		else
+			
+			form.form.form-validation(action="/api/users/password-set" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
 				.reg-form.clear-fix.mdc-elevation--z1
 					input(type="hidden" name="token" value= token)
 						
