--- a/views/users/change-email.pug
+++ b/views/users/change-email.pug
@@ -1,14 +1,13 @@
 extends ../wrapper
 
 block content
-	.page-header
+	.reg-form-container.centered
 		h2
 			a(href="/users/settings")
 				i.material-icons arrow_back_ios
 			| Change Email Address
 		
-	form.form.form-validation(action="/api/users/change-email" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
-		.reg-form-container
+		form.form.form-validation(action="/api/users/change-email" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
