--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -1,11 +1,10 @@
 extends ../wrapper
 
 block content
-	.page-header
+	.reg-form-container.centered
 		h2 <i class="material-icons">person</i> User Login 
 		
-	form.form.form-validation(action="/api/users/login" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
-		.reg-form-container
+		form.form.form-validation(action="/api/users/login" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
