--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -1,12 +1,11 @@
 extends ../wrapper
 
 block content
-	.page-header
-		h2 User Registration 
-					
-	form.form.form-validation(action="/api/users/register" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
+	.reg-form-container.centered
+		h2 <i class="material-icons">person_add</i> User Registration 
+	
+		form.form.form-validation(action="/api/users/register" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 				
-		.reg-form-container
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
