--- a/views/users/home.pug
+++ b/views/users/home.pug
@@ -8,8 +8,9 @@ block content
 
 	if flash
 		p.alert= flash
-
-	.hidden-dont-have-subscription
-		p Hi subscriber!
-	.hidden-have-subscription
-		p Hi, why not <a href="/users/subscription">subscribe now</a>!
+		
+	.page-content
+		.hidden-dont-have-subscription
+			p Hi subscriber!
+		.hidden-have-subscription
+			p Hi, why not <a href="/users/subscription">subscribe now</a>!
