--- a/views/index.pug
+++ b/views/index.pug
@@ -1,13 +1,14 @@
 extends wrapper
 
 block content
-  p Home
-  
-  .hidden-logged-out
-    .hidden-dont-have-subscription
-      p Hi subscriber!
-    .hidden-have-subscription
-      p Hi, why not subscribe now!
+  .page-content
+    p Home
+    
+    .hidden-logged-out
+      .hidden-dont-have-subscription
+        p Hi subscriber!
+      .hidden-have-subscription
+        p Hi, why not subscribe now!
 
 block fab
   .hidden-logged-in
