--- a/views/users/change-email.pug
+++ b/views/users/change-email.pug
@@ -5,7 +5,8 @@ block content
 		h2
 			a(href="/users/settings")
 				i.material-icons arrow_back_ios
-			| Change Email Address
+			i.material-icons mail_outline
+			|  Change Email Address
 		
 		form.form.form-validation(action="/api/users/change-email" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 			.reg-form.clear-fix.mdc-elevation--z1
