--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -8,7 +8,7 @@ body
 	padding:0
 	overscroll-behavior: none
 	background-color:#eee;
-	background-image:url(/images/square_bg_big.png);
+	//background-image:url(/images/square_bg_big.png);
 	background-attachment: fixed;
 
 a
