normalize endpoints and templates

--- a/views/users/email-change.pug
+++ b/views/users/email-change.pug
@@ -6,7 +6,7 @@ block content
 			i.material-icons mail_outline
 			|  Change Email Address
 		
-		form.form.form-validation(action="/api/users/change-email" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
+		form.form.form-validation(action="/api/users/email-change" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
