--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -26,7 +26,8 @@ block content
 
 				section.form-group.pull-right
 					a.mdc-button(href="/") Cancel
-					button#submitter.mdc-button.mdc-button--raised(disabled) Login
+					button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
+						span.mdc-button__label Login
 					
 				.ajax-errors
 			
