--- a/views/users/settings.pug
+++ b/views/users/settings.pug
@@ -14,10 +14,10 @@ block content
 		nav.mdc-list
 
 		.mdc-list-item
-			a(href="/users/change-email") Change Email Address
+			a(href="/users/email-change") Change Email Address
 
 		.mdc-list-item
-			a(href="/users/change-password") Change Password
+			a(href="/users/password-change") Change Password
 
 		.mdc-list-item
 			a(href="/users/subscription") Subscription
