--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,9 +1,11 @@
 $mdc-typography-font-family: unquote("-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\", \"Segoe UI Symbol\"");
 
 $mdc-theme-primary: #333;
-$mdc-theme-accent: #95c200;
+$mdc-theme-accent: #b2e800;
 $mdc-theme-hint: #1a237e;
 $mdc-theme-surface: white;
+
+$darker-accent: #95c200;
 
 @import "@material/typography/mdc-typography";
 @import "@material/theme/mdc-theme";
@@ -32,7 +34,12 @@ $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 
 
 .progress {
-	@include mdc-linear-progress-bar-color(#1a237e);
+	@include mdc-linear-progress-bar-color($darker-accent);
+}
+
+.primary-button {
+	@include mdc-button-container-fill-color($mdc-theme-accent);
+	@include mdc-button-ink-color($mdc-theme-primary);
 }
 
 .mdc-top-app-bar__navigation-icon {
@@ -50,11 +57,11 @@ a:focus {
 
 .mdc-top-app-bar {
 	top:0px;
-	color:#95c200;
+	color:$darker-accent;
 }
 
 .mdc-snackbar {
-	bottom: 1rem;
+	bottom: .5rem;
 }
 
 .app-fab-fixed {
