--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -1,5 +1,8 @@
 @import 'nib'
 
+$darker-accent= #95c200;
+
+
 *, *::before, *::after
 	box-sizing: border-box
 
@@ -59,6 +62,11 @@ section
 .centered
 	margin: 0 auto
 
+.truncate
+	white-space: nowrap
+	overflow: hidden
+	text-overflow: ellipsis
+	
 // icon/text alignment
 h2
 	i
@@ -77,7 +85,7 @@ h2
 .ajax-message-error
 	color: red
 .ajax-message-success
-	color: green
+	color: $darker-accent
 
 button#submitter
 	margin-left: 1em;
@@ -129,7 +137,7 @@ button#submitter
 // make autofill less horrifyingly ugly
 
 input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focus,textarea:-webkit-autofill,textarea:-webkit-autofill:hover,textarea:-webkit-autofill:focus,select:-webkit-autofill,select:-webkit-autofill:hover,select:-webkit-autofill:focus
-	-webkit-text-fill-color: green
+	-webkit-text-fill-color: rgba(0, 0, 0, 0.87)
 	-webkit-box-shadow: 0 0 0px 1000px #fff inset
 	transition: background-color 5000s ease-in-out 0s
 
@@ -149,7 +157,7 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 
 	.input-ok-indicator
 		opacity:0
-		color: green!important
+		color: $darker-accent!important
 
 	.input-ok
 		.input-ok-indicator
