--- a/views/users/home.pug
+++ b/views/users/home.pug
@@ -10,6 +10,9 @@ block content
 		p.alert= flash
 		
 	.page-content
+		if !user.validated
+			p.alert Please check your email to confirm and validate your email address. If you did not recieve the email <a class="mdc-theme--secondary" href="/users/email-change">click here</a> to resend.
+				
 		.hidden-dont-have-subscription
 			p Hi subscriber!
 		.hidden-have-subscription
