--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -20,6 +20,11 @@ a
 h1,h2,h3,h4
 	margin-top: 0
 
+.wait
+	cursor: wait!important
+	a
+		cursor: wait!important
+
 .top-margin
 	margin-top: 64px
 	.screen-xsmall &
@@ -66,7 +71,7 @@ section
 	white-space: nowrap
 	overflow: hidden
 	text-overflow: ellipsis
-	
+
 // icon/text alignment
 h2
 	i
