--- a/views/components/navigation.pug
+++ b/views/components/navigation.pug
@@ -10,4 +10,4 @@ header.mdc-top-app-bar.mdc-top-app-bar--fixed
 				.position-relative
 					.show-notifications-button.material-icons.mdc-top-app-bar__action-item
 						i.fa.fa-fw.fa-bell
-					.badge.activity-count
+					.badge.activity-count 10
