--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -48,6 +48,8 @@ html
             span.mdc-linear-progress__bar-inner
           .mdc-linear-progress__bar.mdc-linear-progress__secondary-bar
             span.mdc-linear-progress__bar-inner
+        
+        #alerts.mdc-elevation--z10
 
         #content-body(data-hijax="true")
           .mdc-layout-grid
