--- a/views/users/email-change.pug
+++ b/views/users/email-change.pug
@@ -24,7 +24,7 @@ block content
 						.mdc-line-ripple
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
-				section.form-group.pull-right
+				section.form-group.pull-right.button-bar
 					a.mdc-button(href="/users/settings") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save
 			
