--- a/views/users/password-reset.pug
+++ b/views/users/password-reset.pug
@@ -15,7 +15,7 @@ block content
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
 			
-				section.form-group.pull-right
+				section.form-group.pull-right.button-bar
 					a.mdc-button(href="/users/login") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save
 					
