--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -63,7 +63,7 @@ block content
 					
 				.ajax-errors
 			
-			.reg-form-footer.clear-fix
+			.reg-form-footer.clear-fix.button-bar
 				.pull-right.mdc-typography--button 
 					a(href="/users/login") Already have an account
 
