--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -24,7 +24,7 @@ block content
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
 
-				section.form-group.pull-right
+				section.form-group.pull-right.button-bar
 					a.mdc-button(href="/") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled).primary-button
 						span.mdc-button__label Login
