--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -49,7 +49,7 @@ html
           .mdc-linear-progress__bar.mdc-linear-progress__secondary-bar
             span.mdc-linear-progress__bar-inner
         
-        #alerts.mdc-elevation--z10
+        #user-alerts.mdc-elevation--z10
 
         #content-body(data-hijax="true")
           .mdc-layout-grid
