--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -224,7 +224,7 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 			font-size: 10em
 
 /* alerts slide-down */
-#alerts
+#user-alerts
 	quick()
 	position:fixed
 	top: -100%
