/users/tokens history page
client side shared pug templates

--- a/views/users/settings.pug
+++ b/views/users/settings.pug
@@ -13,6 +13,8 @@ block content
 
 		nav.mdc-list
 
+			a.mdc-list-item(href="/users/tokens") Login History
+
 			a.mdc-list-item(href="/users/email-change") Change Email Address
 
 			a.mdc-list-item(href="/users/password-change") Change Password
