--- a/views/users/subscription.pug
+++ b/views/users/subscription.pug
@@ -44,6 +44,7 @@ block content
 					
 			.flextable(data-jsclass="flexTable" data-break="screen-xsmall")
 				ul
+					li Date
 					li Description
 					li Start
 					li End
