--- a/views/users/tokens.pug
+++ b/views/users/tokens.pug
@@ -10,7 +10,7 @@ block content
 			= ' access history'
 
 	.page-content
-		.flextable(data-jsclass="flexTable" data-break="screen-small")
+		.flextable(data-jsclass="flexTable" data-break="screen-xsmall,screen-small")
 			ul
 				li Created
 				li Last Access
