--- a/views/users/tokens.pug
+++ b/views/users/tokens.pug
@@ -3,7 +3,7 @@ extends ../wrapper
 block content
 	.page-header
 		h2 
-			a(href="/users/home")
+			a(href="/users/settings")
 				i.material-icons arrow_back_ios
 				
 			i.material-icons lock
