--- a/views/admin/type-textarea.pug
+++ b/views/admin/type-textarea.pug
@@ -1,6 +1,6 @@
-isection.form-group
+section.form-group
 	.mdc-text-field.mdc-text-field--with-trailing-icon.mdc-text-field--textarea
-		textarea.mdc-text-field__input(name= name rows= rows cols= cols data-validate= validate data-mask= mask data-length= length data-min-length= minLength data-max-length= maxLength)
+		textarea.mdc-text-field__input(name= name rows= rows cols= cols data-validate= validate data-mask= mask data-length= length data-min-length= minLength data-max-length= maxLength)= value
 		label.mdc-floating-label= label
 		.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 		.mdc-line-ripple
