--- a/views/admin/type-textarea.pug
+++ b/views/admin/type-textarea.pug
@@ -1,8 +1,11 @@
 section.form-group
 	.mdc-text-field.mdc-text-field--with-trailing-icon.mdc-text-field--textarea
 		textarea.mdc-text-field__input(name= name rows= rows cols= cols data-validate= validate data-mask= mask data-length= length data-min-length= minLength data-max-length= maxLength)= value
-		label.mdc-floating-label= label
+		.mdc-notched-outline
+			.mdc-notched-outline__leading
+			.mdc-notched-outline__notch
+				label.mdc-floating-label= options.label
+			.mdc-notched-outline__trailing
 		.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
-		.mdc-line-ripple
 	.mdc-text-field-helper-line
 		.validation-help.mdc-text-field-helper-text--persistent
