--- a/views/admin/view.pug
+++ b/views/admin/view.pug
@@ -3,7 +3,7 @@ extends ../wrapper
 block content
 	.admin-form-container
 		.admin-form.clear-fix.mdc-elevation--z1
-			.admin(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id)
+			.admin(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id data-redirect= mountpoint + '/' + admin.name)
 				.page-header
 					h2
 						a(href= mountpoint + '/' + admin.name)
